--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1518,8 +1518,7 @@ h6 .badge {
   left: 0;
   width: 100%;
   height: 115px;
-  /* background-color: #6777ef; default */
-  background-color: #43b3c4;
+  background-color: #6777ef;
   z-index: -1; }
 
 .navbar {
